--- a/lab1/mircea.ipynb
+++ b/lab1/mircea.ipynb
@@ -520,9 +520,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "editable": true,
     "nbgrader": {
@@ -534,14 +534,34 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5, 500)\n"
+     ]
+    }
+   ],
    "source": [
     "### 1.4 Whitening\n",
     "def whiten(X):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "\n",
-    "Xw = whiten(X)"
+    "    if X is None:\n",
+    "        raise TypeError('Cannot whiten None')\n",
+    "    \n",
+    "    cov = np.cov(X)\n",
+    "    \n",
+    "    # Get eigenvectors, eigenvalues\n",
+    "    Lambda, Phi = np.linalg.eigh(cov)\n",
+    "    \n",
+    "    # Get diagonal eigen vectors\n",
+    "    Lambda = np.diag(Lambda)\n",
+    "    \n",
+    "    # Obtain \\Lambda^{-1/2}\n",
+    "    Lambda = np.sqrt(np.linalg.inv(Lambda))\n",
+    "    \n",
+    "    # y = \\Lambda \\Phi^{T} X\n",
+    "    return np.dot(Lambda, np.dot(Phi.T, X))\n"
    ]
   },
   {
