Added ICA algorithm

--- a/lab1/mircea.ipynb
+++ b/lab1/mircea.ipynb
@@ -676,7 +676,7 @@
     }
    ],
    "source": [
-    "plot_scatter(Xw, [])"
+    "plot_scatter(Xw, []) # Should be similar to X but decorrelated."
    ]
   },
   {
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -759,8 +759,30 @@
    "source": [
     "### 1.7 Independent Component Analysis\n",
     "def ICA(X, activation_function, learning_rate):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    \"\"\"\n",
+    "    Implements algorithm 34.4 from MacKay.\n",
+    "    \"\"\"\n",
+    "    # Demixing matrix to be computed\n",
+    "    W = random_nonsingular_matrix(d=len(X))\n",
+    "    epochs = 50\n",
+    "    for i in range(epochs):\n",
+    "        # a = Wx\n",
+    "        a = np.dot(W,X)\n",
+    "        \n",
+    "        # z = \\phi(a)\n",
+    "        z = activation_function(a)\n",
+    "        \n",
+    "        # a = W^{T}a\n",
+    "        x = np.dot(W.T, a)\n",
+    "        \n",
+    "        # dW ~ W + zx^{T}\n",
+    "        dW = W + np.dot(z,x.T)\n",
+    "        dW /= X.shape[1]\n",
+    "        \n",
+    "        # Adjust weights\n",
+    "        W += learning_rate * dW\n",
+    "    \n",
+    "    return W"
    ]
   },
   {
