Added kurtosis calculation for source audio, observed data, and theoretical values

--- a/lab1/mircea.ipynb
+++ b/lab1/mircea.ipynb
@@ -1253,8 +1253,36 @@
    "outputs": [],
    "source": [
     "### 1.10.2 Excess Kurtosis\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def display_kurtosis(data, pre=None):\n",
+    "    if data is None:\n",
+    "        raise TypeError('Cannot compute kurtosis for None')\n",
+    "        \n",
+    "    if pre:\n",
+    "        print(pre)\n",
+    "        \n",
+    "    kurt = scipy.stats.kurtosis(data, axis=1, fisher=True)\n",
+    "    print(kurt)\n",
+    "\n",
+    "t_kurtosis = [2, -.5, .95, 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print('Theoretical kurtosis is ', t_kurtosis)\n",
+    "print('-----------------------------------')\n",
+    "display_kurtosis(X_audio, pre='Kurtosis of observed audio:')\n",
+    "print('-----------------------------------')\n",
+    "display_kurtosis(S_audio, pre='Kurtosis of source audio:')\n",
+    "print('-----------------------------------')\n",
+    "\n",
+    "for (reconstr_audio, phi_used) in zip(S_audio_rec, phi_titles):\n",
+    "    display_kurtosis(reconstr_audio, pre='Kurtosis of reconstructed audio using ' + phi_used)"
    ]
   },
   {
@@ -1275,6 +1303,15 @@
    "source": [
     "YOUR ANSWER HERE"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
