--- a/lab1/mircea.ipynb
+++ b/lab1/mircea.ipynb
@@ -9,6 +9,16 @@
    "source": [
     "# Lab 1: Independent Component Analysis\n",
     "\n",
+    "#### TO-DOs\n",
+    "- Interpret all results.\n",
+    "- Fill in answers to theoretical questions.\n",
+    "- Re-do last part calculations again, make sure everything is correct.\n",
+    "- Make sure pipeline is working properly.\n",
+    "- Add subtitles to scatter plot functions.\n",
+    "- Find optimum hyperparameters.\n",
+    "- (optional) Alternative way of measure reconstruction between distributions? KL-Div, NegEntropy,etc.\n",
+    "- (optional) \"Also, mixing is not instantaneous in real life, because the sound from one source arrives at each ear at a different point in time. If you have time left, you can think of ways to deal with these issues.\" --> Perhaps offset the audio signals to make them arrive sequentially? Not sure.\n",
+    "\n",
     "### Machine Learning 2 (2016/2017)\n",
     "\n",
     "* The lab exercises should be made in groups of two people.\n",
