Added kurtosis L2-distance comparison and result reporting.

--- a/lab1/mircea.ipynb
+++ b/lab1/mircea.ipynb
@@ -1153,7 +1153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We observe very strong reconstruction for the activation functions $\\phi_0$ and $\\phi_3$, which shows in the reconstructed signals bearing high resemblance to the source signals, which are a bit more complex than the the generated toy data.  Although the activation functions $\\phi_1$ and $\\phi_2$ performed well on the generated mixture measurements (see 1.8), they seem to produce poor results here."
+    "We observe good reconstruction performance for the activation functions $\\phi_0$ and $\\phi_3$, which shows in the reconstructed signals bearing high resemblance to the source signals, which are a bit more complex than the the generated toy data.  Although the activation functions $\\phi_1$ and $\\phi_2$ performed well on the generated mixture measurements (see 1.8), they seem to produce poor results here."
    ]
   },
   {
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -1313,56 +1313,69 @@
     "    if pre:\n",
     "        print(pre)\n",
     "        \n",
-    "    kurt = kurtosis(data, axis=1, fisher=True)\n",
+    "    kurt = np.sort(np.array(kurtosis(data, axis=1, fisher=True)))\n",
     "    print(kurt)\n",
+    "    return kurt\n",
     "\n",
     "t_kurtosis = [2, -.5, .95, 6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true
+    "editable": true,
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Theoretical kurtosis:\n",
-      "[2, -0.5, 0.95, 6]\n",
-      "-----------------------------------\n",
       "Kurtosis of observed audio:\n",
-      "[ 0.45218004  0.57823182  0.64397711  0.89431913  0.53310477]\n",
+      "[ 0.45218004  0.53310477  0.57823182  0.64397711  0.89431913]\n",
       "-----------------------------------\n",
       "Kurtosis of source audio:\n",
-      "[ 1.79431517  2.06885064  1.93609295  5.05191721  0.53887581]\n",
+      "[ 0.53887581  1.79431517  1.93609295  2.06885064  5.05191721]\n",
+      "\n",
       "-----------------------------------\n",
       "Kurtosis of reconstructed audio using $\\phi_0$\n",
-      "[ 5.05116058  1.80167274  1.96945914  1.65044689  0.44301471]\n",
+      "[ 0.44301471  1.65044689  1.80167274  1.96945914  5.05116058]\n",
+      "L2-distance of $\\phi_0$ kurtosis with source audio kurtosis:\n",
+      "0.240490059041\n",
+      "-----------------------------------\n",
       "Kurtosis of reconstructed audio using $\\phi_1$\n",
-      "[ 1.02585711  0.3853173   0.41850293  1.09092175  0.22070024]\n",
+      "[ 0.22070024  0.3853173   0.41850293  1.02585711  1.09092175]\n",
+      "L2-distance of $\\phi_1$ kurtosis with source audio kurtosis:\n",
+      "4.60075109551\n",
+      "-----------------------------------\n",
       "Kurtosis of reconstructed audio using $\\phi_2$\n",
-      "[ 0.46601833  0.86824658  0.25513153  0.2224414   0.29800549]\n",
+      "[ 0.2224414   0.25513153  0.29800549  0.46601833  0.86824658]\n",
+      "L2-distance of $\\phi_2$ kurtosis with source audio kurtosis:\n",
+      "5.02242161966\n",
+      "-----------------------------------\n",
       "Kurtosis of reconstructed audio using $\\phi_3$\n",
-      "[ 0.3509748   1.9525221   0.82872368  1.80668588  5.05050415]\n"
+      "[ 0.3509748   0.82872368  1.80668588  1.9525221   5.05050415]\n",
+      "L2-distance of $\\phi_3$ kurtosis with source audio kurtosis:\n",
+      "0.998976588253\n"
      ]
     }
    ],
    "source": [
-    "print('Theoretical kurtosis:')\n",
-    "print(t_kurtosis)\n",
-    "print('-----------------------------------')\n",
     "display_kurtosis(X_audio, pre='Kurtosis of observed audio:')\n",
     "print('-----------------------------------')\n",
-    "display_kurtosis(S_audio, pre='Kurtosis of source audio:')\n",
-    "print('-----------------------------------')\n",
+    "S_kurt = display_kurtosis(S_audio, pre='Kurtosis of source audio:')\n",
+    "\n",
+    "print \n",
+    "\n",
     "\n",
     "for (reconstr_audio, phi_used) in zip(S_audio_rec, phi_titles):\n",
-    "    display_kurtosis(reconstr_audio, pre='Kurtosis of reconstructed audio using ' + phi_used)"
+    "    print('-----------------------------------')\n",
+    "    reconstr_kurt = display_kurtosis(reconstr_audio, pre=('Kurtosis of reconstructed audio using ' + phi_used))\n",
+    "    print \"L2-distance of \" + phi_used  + \" kurtosis with source audio kurtosis:\"\n",
+    "    print np.linalg.norm(S_kurt-reconstr_kurt) \n"
    ]
   },
   {
@@ -1381,19 +1394,10 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "We compare the kurtosis values of the source audio and the reconstructed audio above. To obtain a scalar similarity measure, we sort the kurtosis values (since the signals are unordered after demixing) and compute the $L^2$-distance from the sorted source audio kurtosis. The $L^2$-distances confirm our visual results that $\\phi_0$ and $\\phi_3$ perform better than $\\phi_1$ and $\\phi_2$. Surprisingly, $\\phi_0$ seems to outperform even $\\phi_3$ by a considerable margin with this measure.\n",
+    "Concluding, our results support the notion that kurtosis is a good similary measure. However, more elaborate comparison work needs to be done to verify the practical value of this measure.\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
