Expanded whitening and independence explanation

--- a/lab1/mircea.ipynb
+++ b/lab1/mircea.ipynb
@@ -771,9 +771,7 @@
    "source": [
     "**Question: Are the signals independent after whitening **\n",
     "\n",
-    "Some initial thoughts:\n",
-    "\n",
-    "- Whitening yields components that are uncorrelated (as can be seen in the third set of scatter plots), but not necessarily independent ([1],[2])."
+    "Whitening yields components that are _uncorrelated_ (as can be seen in the third set of scatter plots), but **not necessarily independent** ([1],[2]). The relatively strong linear relation of the mixtures is at least partially removed in the mixes after the whitening. However, this is not enough to confirm independence."
    ]
   },
   {
