fix last kurtosis

--- a/lab1/mircea.ipynb
+++ b/lab1/mircea.ipynb
@@ -9,16 +9,6 @@
    "source": [
     "# Lab 1: Independent Component Analysis\n",
     "\n",
-    "#### TO-DOs\n",
-    "- Interpret all results.\n",
-    "- Fill in answers to theoretical questions.\n",
-    "- Re-do last part calculations again, make sure everything is correct.\n",
-    "- Make sure pipeline is working properly.\n",
-    "- Add subtitles to scatter plot functions. (DONE)\n",
-    "- Find optimum hyperparameters.\n",
-    "- (optional) Alternative way of measure reconstruction between distributions? KL-Div, NegEntropy,etc.\n",
-    "- (optional) \"Also, mixing is not instantaneous in real life, because the sound from one source arrives at each ear at a different point in time. If you have time left, you can think of ways to deal with these issues.\" --> Perhaps offset the audio signals to make them arrive sequentially? Not sure.\n",
-    "\n",
     "### Machine Learning 2 (2016/2017)\n",
     "\n",
     "* The lab exercises should be made in groups of two people.\n",
@@ -1257,7 +1247,7 @@
     "\n",
     "$$Kurt_{f_2}[X] = \\dfrac{\\int_{-\\infty}^{\\infty} \\dfrac{\\sqrt{2}}{\\Gamma(\\dfrac{1}{4})} \\cdot \\exp(-\\dfrac{x^{4}}{4}) \\cdot x^{4} \\textit{dx}}{(\\int_{-\\infty}^{\\infty} \\dfrac{\\sqrt{2}}{\\Gamma(\\dfrac{1}{4})} \\cdot \\exp(-\\dfrac{x^{4}}{4}) \\cdot x^{2} \\textit{dx})^{2}} - 3 \\approx \\dfrac{1}{0.45694} - 3  \\approx - 0.8115288$$\n",
     "\n",
-    "$$Kurt_{f_3}[X] = \\dfrac{\\int_{-\\infty}^{\\infty} \\dfrac{200\\sqrt{5}}{3\\pi} \\cdot (x^{8} + 5)^{-3} \\textit{dx}}{(\\int_{-\\infty}^{\\infty} \\dfrac{200\\sqrt{5}}{3\\pi} \\cdot (x^{4} + 5)^{-3} \\textit{dx})^{2}} = \\dfrac{25 * 9}{25} - 3 = 6$$"
+    "$$Kurt_{f_3}[X] = \\dfrac{\\int_{-\\infty}^{\\infty} \\dfrac{200\\sqrt{5}}{3\\pi} \\cdot (x^{2} + 5)^{-3} \\cdot x^{4}\\textit{dx}}{(\\int_{-\\infty}^{\\infty} \\dfrac{200\\sqrt{5}}{3\\pi} \\cdot (x^{2} + 5)^{-3} \\cdot x^{2}\\textit{dx})^{2}} = \\dfrac{25 * 9}{25} - 3 = 6$$"
    ]
   },
   {
