Move to lab1, download reconstructions

--- a/lab1/mircea.ipynb
+++ b/lab1/mircea.ipynb
@@ -1388,6 +1388,15 @@
     "- [2] https://users.ics.aalto.fi/whyj/publications/thesis/thesis_node14.html\n",
     "- [3] http://www.inference.phy.cam.ac.uk/mackay/ica.pdf"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
