--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -260,7 +260,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -284,7 +284,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,15 +308,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# YOUR ANSWER HERE\n"
+    "# YOUR ANSWER HERE\n",
+    "### INITIALIZE VARIABLES\n",
+    "def init_vars(names, states):\n",
+    "    assert len(names) == len(states)\n",
+    "    return [Variable(names[i], states[i]) for i in range(len(states))]\n",
+    "\n",
+    "names = ['Influenza', 'SoreThroat', 'Fever', 'Bronchitis', 'Choughing', 'Smokes', 'Wheeze']\n",
+    "states = [2] * len(names)\n",
+    "infl, sthroat, fever, bronch, chough, smokes, wheeze = init_vars(names, states)\n",
+    "\n",
+    "\n",
+    "### INITIALIZE FACTOR NODES\n"
    ]
   },
   {
