Factor nodes initialization

--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -327,7 +327,79 @@
     "infl, sthroat, fever, bronch, chough, smokes, wheeze = init_vars(names, states)\n",
     "\n",
     "\n",
-    "### INITIALIZE FACTOR NODES\n"
+    "\"\"\"\n",
+    "INITIALIZE FACTOR NODES\n",
+    "Factors will have N axes, where N is the number of neighbours, for example\n",
+    "f_2 has 2 neighbours, respectively SThroat and Influenza. \"Each axis of the array should have as \n",
+    "many entries as the corresponding neighbour variable has states\".\n",
+    "Let's say we have Influenza on axis 0, and Sthroat on axis 1.\n",
+    "\n",
+    "p(𝚂𝚘𝚛𝚎𝚃𝚑𝚛𝚘𝚊𝚝=1|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=1)=0.3 => P(SoreThroat=0|Influenza=1) = 0.7\n",
+    "p(𝚂𝚘𝚛𝚎𝚃𝚑𝚛𝚘𝚊𝚝=1|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=0)=0.001 => P(SoreThroat=0|Influenza=0) = 0.999\n",
+    "            \n",
+    "                 Sthroat\n",
+    "                0       1\n",
+    "            0   0.999 | 0.001\n",
+    "Influenza      ---------------\n",
+    "            1  0.7    | 0.3\n",
+    "            \n",
+    "We can refactor it into something more general later on.\n",
+    "\"\"\"\n",
+    "def init_factors(infl, sthroat, fever, bronch, chough, smokes, wheeze):\n",
+    "    # Index on a specific axes coresponds to the state of the variable.\n",
+    "    # f_1\n",
+    "    f1_neigh = [infl]\n",
+    "    f1_vals = np.array([0.95, 0.05])\n",
+    "    f1 = Factor('f1', f1_vals, f1_neigh)\n",
+    "    \n",
+    "    # f_2\n",
+    "    f2_neigh = [infl, sthroat] # Infl-> axis 0, Sthroat -> axis 1\n",
+    "    f2_vals = np.array([[0.999, 0.001], [0.7, 0.3]]) \n",
+    "    f2 = Factor('f2', f2_vals, f2_neigh)\n",
+    "    \n",
+    "    # f_3\n",
+    "    # p(𝙵𝚎𝚟𝚎𝚛=1|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=1)=0.9  => P(Fever=0|Influenza=1) = 0.1\n",
+    "    # p(𝙵𝚎𝚟𝚎𝚛=1|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=0)=0.05 => P(Fever=0|Influenza=0) = 0.95\n",
+    "    f3_neigh = [infl, fever] # Infl-> axis 0, fever -> axis 1\n",
+    "    f3_vals = np.array([[0.95, 0.05], [0.1, 0.9]])\n",
+    "    f3 = Factor('f3', f3_vals, f3_neigh)\n",
+    "    \n",
+    "    # f_4\n",
+    "    # p(𝙱𝚛𝚘𝚗𝚌𝚑𝚒𝚝𝚒𝚜=1|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=1,𝚂𝚖𝚘𝚔𝚎𝚜=1)=0.99 => p(𝙱𝚛𝚘𝚗𝚌𝚑𝚒𝚝𝚒𝚜=0|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=1,𝚂𝚖𝚘𝚔𝚎𝚜=1)=0.01\n",
+    "    # p(𝙱𝚛𝚘𝚗𝚌𝚑𝚒𝚝𝚒𝚜=1|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=1,𝚂𝚖𝚘𝚔𝚎𝚜=0)=0.9 => p(𝙱𝚛𝚘𝚗𝚌𝚑𝚒𝚝𝚒𝚜=0|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=1,𝚂𝚖𝚘𝚔𝚎𝚜=0)=0.1\n",
+    "    # p(𝙱𝚛𝚘𝚗𝚌𝚑𝚒𝚝𝚒𝚜=1|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=0,𝚂𝚖𝚘𝚔𝚎𝚜=1)=0.7 => p(𝙱𝚛𝚘𝚗𝚌𝚑𝚒𝚝𝚒𝚜=0|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=0,𝚂𝚖𝚘𝚔𝚎𝚜=1)=0.3\n",
+    "    # p(𝙱𝚛𝚘𝚗𝚌𝚑𝚒𝚝𝚒𝚜=1|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=0,𝚂𝚖𝚘𝚔𝚎𝚜=0)=0.0001 => p(𝙱𝚛𝚘𝚗𝚌𝚑𝚒𝚝𝚒𝚜=0|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=0,𝚂𝚖𝚘𝚔𝚎𝚜=0)=0.9999\n",
+    "    f4_vals = np.zeros((2,2,2))\n",
+    "    f4_neigh = [infl, smokes, bronch]\n",
+    "    f4_vals[0,0,0], f4_vals[0,0,1] = 0.9999, 0.0001\n",
+    "    f4_vals[1,0,0], f4_vals[1,0,1] = 0.1, 0.9\n",
+    "    f4_vals[1,1,1], f4_vals[1,1,0] = 0.99, 0.01\n",
+    "    f4_vals[0,1,0], f4_vals[0,1,1] = 0.3, 0.7\n",
+    "    f4 = Factor('f4', f4_vals, f4_neigh)\n",
+    "    \n",
+    "    # f_5\n",
+    "    # p(𝙲𝚘𝚞𝚐𝚑𝚒𝚗𝚐=1|𝙱𝚛𝚘𝚗𝚌𝚑𝚒𝚝𝚒𝚜=1)=0.8 => p(Choughing=0|Bronchitis=1) = 0.2\n",
+    "    # p(𝙲𝚘𝚞𝚐𝚑𝚒𝚗𝚐=1|𝙱𝚛𝚘𝚗𝚌𝚑𝚒𝚝𝚒𝚜=0)=0.07 => p(Choughing=0|Bornchitis=0) = 0.93\n",
+    "    f5_neigh = [bronch, chough]\n",
+    "    f5_vals = np.array([[0.93, 0.07], [0.2, 0.8]])\n",
+    "    f5 = Factor('f5', f5_vals, f5_neigh)\n",
+    "    \n",
+    "    # f_6\n",
+    "    # p(𝚆𝚑𝚎𝚎𝚣𝚒𝚗𝚐=1|𝙱𝚛𝚘𝚗𝚌𝚑𝚒𝚝𝚒𝚜=1)=0.6 => P(Wheezing=0|Bronchitis=1) = 0.4\n",
+    "    # p(𝚆𝚑𝚎𝚎𝚣𝚒𝚗𝚐=1|𝙱𝚛𝚘𝚗𝚌𝚑𝚒𝚝𝚒𝚜=0)=0.001 => P(Wheezing=0|Bronchitis=0) = 0.999\n",
+    "    f6_neigh = [bronch, wheeze]\n",
+    "    f6_vals = np.array([[0.999, 0.001],[0.4, 0.6]])\n",
+    "    f6 = Factor('f6', f6_vals, f6_neigh)\n",
+    "    \n",
+    "    # f_7\n",
+    "    # p(𝚂𝚖𝚘𝚔𝚎𝚜 = 1)=0.2\n",
+    "    f7_neigh = [smokes]\n",
+    "    f7_vals = np.array([0.8, 0.2])\n",
+    "    f7 = Factor('f7', f7_vals, f7_neigh)\n",
+    "    \n",
+    "    return f1,f2,f3,f4,f5,f6,f7\n",
+    "\n",
+    "f1,f2,f3,f4,f5,f6,f7 = init_factors(infl, sthroat, fever, bronch, chough, smokes, wheeze)"
    ]
   },
   {
