--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -203,8 +203,9 @@
     "        self.f = f\n",
     "        \n",
     "    def send_sp_msg(self, other):\n",
-    "        # TODO: implement Factor -> Variable message for sum-product\n",
+    "        # TODO\n",
     "        pass\n",
+    "        \n",
     "   \n",
     "    def send_ms_msg(self, other):\n",
     "        # TODO: implement Factor -> Variable message for max-sum\n",
@@ -246,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -260,7 +261,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,9 +273,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -284,7 +287,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +298,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "$$f_1 = P(Influenza)$$\n",
     "$$f_2 = P(SoreThroat|Influenza)$$ \n",
@@ -308,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -325,7 +331,6 @@
     "names = ['Influenza', 'SoreThroat', 'Fever', 'Bronchitis', 'Choughing', 'Smokes', 'Wheeze']\n",
     "states = [2] * len(names)\n",
     "infl, sthroat, fever, bronch, chough, smokes, wheeze = init_vars(names, states)\n",
-    "\n",
     "\n",
     "\"\"\"\n",
     "INITIALIZE FACTOR NODES\n",
@@ -354,14 +359,16 @@
     "    \n",
     "    # f_2\n",
     "    f2_neigh = [infl, sthroat] # Infl-> axis 0, Sthroat -> axis 1\n",
-    "    f2_vals = np.array([[0.999, 0.001], [0.7, 0.3]]) \n",
+    "    f2_vals = np.array([[0.999, 0.001], \n",
+    "                        [0.7, 0.3]]) \n",
     "    f2 = Factor('f2', f2_vals, f2_neigh)\n",
     "    \n",
     "    # f_3\n",
     "    # p(𝙵𝚎𝚟𝚎𝚛=1|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=1)=0.9  => P(Fever=0|Influenza=1) = 0.1\n",
     "    # p(𝙵𝚎𝚟𝚎𝚛=1|𝙸𝚗𝚏𝚕𝚞𝚎𝚗𝚣𝚊=0)=0.05 => P(Fever=0|Influenza=0) = 0.95\n",
     "    f3_neigh = [infl, fever] # Infl-> axis 0, fever -> axis 1\n",
-    "    f3_vals = np.array([[0.95, 0.05], [0.1, 0.9]])\n",
+    "    f3_vals = np.array([[0.95, 0.05], \n",
+    "                        [0.1, 0.9]])\n",
     "    f3 = Factor('f3', f3_vals, f3_neigh)\n",
     "    \n",
     "    # f_4\n",
@@ -416,6 +423,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "if sys.version_info[0] >= 3.0:\n",
+    "    from functools import reduce \n",
+    "\n",
+    "def factor_send_sp_msg(self, other):\n",
+    "    \"\"\"\n",
+    "    Sends a message to a variable from the current factor.\n",
+    "    - other: Variable to send message to.\n",
+    "    \"\"\"\n",
+    "    if type(other) is not Variable:\n",
+    "        raise TypeError('Factor nodes can only send messages to Variables.')\n",
+    "\n",
+    "    if len(self.in_msgs) != len(self.neighbours):\n",
+    "        raise Exception('Have not received all incoming messages.')\n",
+    "\n",
+    "    if other not in self.neighbours:\n",
+    "        raise ValueError('Cannot send message to a non-neighbour node.')\n",
+    "\n",
+    "    # Get messages from all neighbours except other\n",
+    "    messages = [self.in_msgs[neighbour] for neighbour in self.neighbours if neighbour != other]\n",
+    "\n",
+    "    # Obtain product of all received messages\n",
+    "    # \\prod \\mu_x -> f(x)\n",
+    "    received_prod = reduce(np.outer, messages)\n",
+    "\n",
+    "    # Obtain indices to reduce in tensordot\n",
+    "    # Tensordot is essentially dor product extended to more dimensions. \n",
+    "    # It will perform sum-reduction, i.e. reduce the respective axes after multiplication\n",
+    "    # by summing over them.\n",
+    "    # See: https://docs.scipy.org/doc/numpy/reference/generated/numpy.tensordot.html\n",
+    "    f_axes = [i for i in range(len(self.neighbours)) if i != self.neighbours.index(other)]\n",
+    "    m_axes = range(len(self.neighbours) - 1)\n",
+    "\n",
+    "    # Compute message\n",
+    "    message = np.tensordot(self.f, received_prod, axes=(f_axes, m_axes))\n",
+    "\n",
+    "    # Send message\n",
+    "    other.receive_msg(self, message)\n",
+    "    \n",
+    "    # \"Modify the send_msg functions to remove pending messages as they are sent.\"\n",
+    "    self.pending.remove(other)\n",
+    "\n",
+    "Factor.send_sp_message = factor_send_sp_msg"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -428,6 +489,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def variable_send_sp_message(self, other):\n",
+    "    if type(other) is not Factor:\n",
+    "        raise TypeError('Variable nodes can only send messages to Factor nodes.')\n",
+    "        \n",
+    "    if len(self.in_msgs) != len(self.neighbours):\n",
+    "        raise Exception('Have not received all incoming messages.')\n",
+    "    \n",
+    "    if other not in self.neighbours:\n",
+    "        raise ValueError('Cannot send message to a non-neighbour node.')\n",
+    "    \n",
+    "    # Get messages from all neighbours except other\n",
+    "    messages = [self.in_msgs[neighbour] for neighbour in self.neighbours if neighbour != other]\n",
+    "    \n",
+    "    # Get message to be sent\n",
+    "    message = np.prod(messages, axis=0) * self.observed_state\n",
+    "    \n",
+    "    # Send message to neighbour factor.\n",
+    "    other.receive_msg(self, message)\n",
+    "    \n",
+    "    # \"Modify the send_msg functions to remove pending messages as they are sent.\"\n",
+    "    self.pending.remove(other)\n",
+    "    \n",
+    "Variable.send_sp_message = variable_send_sp_message"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -437,6 +531,31 @@
     "### 1.4 Compute marginal (10 points)\n",
     "Later in this assignment, we will implement message passing schemes to do inference. Once the message passing has completed, we will want to compute local marginals for each variable.\n",
     "Write the method `marginal` for the Variable class, that computes a marginal distribution over that node."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def variable_marginal(self, Z=None):\n",
+    "    \"\"\"\n",
+    "    Compute and return marginal of a variable after\n",
+    "    the message passing has completed.\n",
+    "    \"\"\"\n",
+    "    if len(self.in_msgs) != len(self.neighbours):\n",
+    "        raise Exception('Have not received messages from all neighbours')\n",
+    "    \n",
+    "    # \\mu_alpha * \\mu_beta\n",
+    "    messages = self.in_msgs.values()\n",
+    "    unnorm_marginal = np.prod(messages, axis=0) * self.observed_state\n",
+    "    Z = Z if Z is not None else np.sum(unnorm_marginal)\n",
+    "    return unnorm_marginal / Z, Z\n",
+    "\n",
+    "Variable.marginal = variable_marginal"
    ]
   },
   {
@@ -457,6 +576,36 @@
     "Keep in mind that for the non-loopy algorithm, nodes may not have received any messages on some or all of their links. Therefore, before we say node a has a pending message for node b, we must check that node a has received all messages needed to compute the message that is to be sent to b.\n",
     "\n",
     "Modify the function `receive_msg`, so that it updates the self.pending variable as described above. The member self.pending is a set that is to be filled with Nodes to which self has pending messages. Modify the `send_msg` functions to remove pending messages as they are sent."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def node_receive_msg(self, other, msg):\n",
+    "        # Store the incomming message, replacing previous messages from the same node\n",
+    "        self.in_msgs[other] = msg\n",
+    "        \n",
+    "        # Given that we have received a message from 'other'\n",
+    "        # we want to update the 'pending link' with all other nodes.\n",
+    "        num_nbs = len(self.neighbours)\n",
+    "        num_msgs = len(self.in_msgs)\n",
+    "        \n",
+    "        # Idea here is that to check that we have messages from all other nodes\n",
+    "        for neighbour in self.neighbours:\n",
+    "            if neighbour == other:\n",
+    "                continue\n",
+    "            \n",
+    "            # Node has received message from all nodes, including this one.\n",
+    "            # or has received message from all other nodes.\n",
+    "            if (neighbour in self.in_msgs and num_msgs == num_nbs) or num_msgs == num_nbs - 1:\n",
+    "                self.pending.update([neighbour])\n",
+    "            \n",
+    "Node.receive_msg = node_receive_msg"
    ]
   },
   {
@@ -482,7 +631,12 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR ANSWER HERE"
+    "# YOUR ANSWER HER\n",
+    "def sum_product(node_list):\n",
+    "    \"\"\"\n",
+    "    node_list is a list of nodes ordered from leaf -> root.\n",
+    "    \"\"\"\n",
+    "    "
    ]
   },
   {
