--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -623,20 +623,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
-    "# YOUR ANSWER HER\n",
+    "# YOUR ANSWER HERE\n",
     "def sum_product(node_list):\n",
     "    \"\"\"\n",
     "    node_list is a list of nodes ordered from leaf -> root.\n",
     "    \"\"\"\n",
-    "    "
+    "    for node in node_list:\n",
+    "        for pending in node.pending:\n",
+    "            node.send_sp_message(pending)\n",
+    "\n",
+    "# Variables and Factors are initialized in first cell.\n",
+    "# They are: infl, sthroat, fever, bronch, chough, smokes, wheeze\n",
+    "# Initialize leaf nodes as specified.\n",
+    "f1.pending.add(infl)\n",
+    "f7.pending.add(smokes)\n",
+    "sthroat.pending.add(f2)\n",
+    "fever.pending.add(f3)\n",
+    "chough.pending.add(f5)\n",
+    "wheeze.pending.add(f6)"
    ]
   },
   {
@@ -648,6 +660,17 @@
    "source": [
     "### 1.7 Observed variables and probabilistic queries (15 points)\n",
     "We will now use the inference engine to answer probabilistic queries. That is, we will set certain variables to observed values, and obtain the marginals over latent variables. We have already provided functions `set_observed` and `set_latent` that manage a member of Variable called `observed_state`. Modify the `Variable.send_msg` and `Variable.marginal` routines that you wrote before, to use `observed_state` so as to get the required marginals when some nodes are observed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# This has been already done/implemented, see above."
    ]
   },
   {
